--- a/behavioral/strategy/pom.xml
+++ b/behavioral/strategy/pom.xml
@@ -9,12 +9,12 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.hradecek.patterns.structural.strategy</groupId>
-  <artifactId>strategy-structural-design-pattern</artifactId>
+  <groupId>com.hradecek.patterns.behavioral.strategy</groupId>
+  <artifactId>strategy-behavioral-design-pattern</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>strategy-structural-design-pattern</name>
-  <url>http://maven.apache.org</url>
+  <name>strategy-behavioral-design-pattern</name>
+  <url>http://github.com/hradecek/design-patterns/tree/master/behavioral/strategy</url>
 
   <properties>
     <example>ex01</example>
@@ -34,7 +34,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.hradecek.patterns.structural.strategy.${example}.Demo</mainClass>
+          <mainClass>com.hradecek.patterns.behavioral.strategy.${example}.Demo</mainClass>
         </configuration>
       </plugin>
       <plugin>
