--- a/creational/pom.xml
+++ b/creational/pom.xml
@@ -12,7 +12,8 @@
   <groupId>com.hradecek.patterns.creational</groupId>
   <artifactId>creational-design-patterns</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>creational-design-patterns</name>
-  <url>http://github.com/hradecek</url>
+  <url>https://github.com/hradecek/design-patterns/tree/master/creational</url>
 </project>
