--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -12,7 +11,13 @@
   <groupId>com.hradecek.patterns.structural</groupId>
   <artifactId>structural-design-patterns</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>structural-design-patterns</name>
-  <url>http://github.com/hradecek</url>
+  <url>http://github.com/hradecek/design-patterns/tree/master/structural</url>
+
+  <modules>
+    <module>decorator</module>
+  </modules>
+
 </project>
