--- a/structural/decorator/pom.xml
+++ b/structural/decorator/pom.xml
@@ -15,4 +15,36 @@
 
   <name>decorator-structural-design-pattern</name>
   <url>http://github.com/hradecek/design-patterns/tree/master/structural/decorator</url>
+
+  <properties>
+    <example>ex01</example>
+  </properties>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>${version.exec.maven.plugin}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>com.hradecek.patterns.behavioral.decorator.${example}.Demo</mainClass>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
