--- a/structural/decorator/pom.xml
+++ b/structural/decorator/pom.xml
@@ -34,7 +34,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.hradecek.patterns.behavioral.decorator.${example}.Demo</mainClass>
+          <mainClass>com.hradecek.patterns.structural.decorator.${example}.Demo</mainClass>
         </configuration>
       </plugin>
       <plugin>
