Initial commit for Composite design pattern

--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -17,6 +17,7 @@
   <url>http://github.com/hradecek/design-patterns/tree/master/structural</url>
 
   <modules>
+    <module>composite</module>
     <module>decorator</module>
   </modules>
 
